// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Navbar.svelte > should render logged in 1`] = `
<body>
  <div>
    <header
      class="navbar"
    >
      <div
        class="navbar-start flex gap-2"
      >
        <div
          class="prose"
        >
          <h1>
            613
          </h1>
        </div>
         
        <div
          class="prose hidden md:block"
        >
          <h1>
            Stanford Dr
          </h1>
        </div>
      </div>
       
      <div
        class="navbar-center space-x-2"
      >
        <a
          class="btn"
          href="/"
        >
          Home
        </a>
         
        <a
          class="btn"
          data-sveltekit-preload-data=""
          href="/blog"
        >
          Blog
        </a>
         
        <a
          class="btn"
          data-sveltekit-preload-data=""
          href="/pool"
        >
          Pool
        </a>
      </div>
       
      <div
        class="navbar-end space-x-1"
      >
        <p
          class="prose hidden md:block"
        >
          Welcome, 
          <span
            class="italic font-bold"
          >
            test user
          </span>
        </p>
         
        <a
          class="btn-circle"
          href="/profile"
        >
          <img
            alt="test user"
            class="h-12 w-12 rounded-full"
            src="https://example.com/mock-user-photo.jpg"
          />
        </a>
         
        <button
          class="btn hidden md:block"
        >
          Log Out
        </button>
        <!--&lt;MockDoc&gt;-->
        
        <!--&lt;MockSignedIn&gt;-->
         
        
        <!--&lt;MockSignedOut&gt;-->
      </div>
    </header>
    <!--&lt;Navbar&gt;-->
  </div>
</body>
`;

exports[`Navbar.svelte > should render logged out 1`] = `
<body>
  <div>
    <header
      class="navbar"
    >
      <div
        class="navbar-start flex gap-2"
      >
        <div
          class="prose"
        >
          <h1>
            613
          </h1>
        </div>
         
        <div
          class="prose hidden md:block"
        >
          <h1>
            Stanford Dr
          </h1>
        </div>
      </div>
       
      <div
        class="navbar-center space-x-2"
      >
        <a
          class="btn"
          href="/"
        >
          Home
        </a>
         
        <a
          class="btn"
          data-sveltekit-preload-data=""
          href="/blog"
        >
          Blog
        </a>
         
        <a
          class="btn"
          data-sveltekit-preload-data=""
          href="/pool"
        >
          Pool
        </a>
      </div>
       
      <div
        class="navbar-end space-x-1"
      >
        
        <!--&lt;MockSignedIn&gt;-->
         
        <button
          class="btn"
        >
          <i
            class="fa-brands fa-google fa-xl"
            style="color: rgb(235, 77, 39);"
          />
          
				Sign In with Google
        </button>
        
        <!--&lt;MockSignedOut&gt;-->
      </div>
    </header>
    <!--&lt;Navbar&gt;-->
  </div>
</body>
`;
